--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </label>
 </form>
 
-<table id="data-table">
+<table id="data-table" style="width: 100%;">
     <thead>
         <tr>
             <th>Poster</th>
